k8s/ops/observability/ingress/00-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: ops
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.home.lan
      secretName: wildcard-home-lan-tls
  rules:
    - host: grafana.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
